Fix guide menu overflow [ci skip]
This is a follow-up to 92b65a0f7e8c07942547d93df4a60a64088ff53f.
It's also a temporary fix until we can find a better solution.

--- a/guides/assets/stylesrc/_main.scss
+++ b/guides/assets/stylesrc/_main.scss
@@ -592,7 +592,6 @@ body.guide {
     display: block;
     border-radius: $base-border-radius;
     color: $gray-900;
-    height: 61em;
     padding: 2em 2em 1.5em 2em;
     position: absolute;
       top: 25px;
